fix upgrade image cutoff

--- a/src/styles/modules/upgrade.scss
+++ b/src/styles/modules/upgrade.scss
@@ -113,9 +113,9 @@ button.yearly:after {
 		background-image: url('../images/Professional-plan@2x.png');
 		background-repeat: no-repeat;
 		background-size: 95%;
-		height: 130px;
+		height: 170px;
 		width: 190px;
-		margin: 0 auto 30px;
+		margin: 0 auto;
 		background-position: right;
 	}
 
@@ -159,9 +159,9 @@ button.yearly:after {
 		background-image: url('../images/Professional-plan@2x.png');
 		background-repeat: no-repeat;
 		background-size: 95%;
-		height: 250px;
+		height: 280px;
 		width: 320px;
-		margin: 0 auto 10px;	
+		margin: 0 auto;	
 	}
 
 	button.yearly:after {
@@ -182,7 +182,7 @@ button.yearly:after {
 		background-image: url('../images/Professional-plan@2x.png');
 		background-repeat: no-repeat;
 		background-size: 95%;
-		height: 250px;
+		height: 290px;
 		width: 320px;
 		margin: 0 auto;	
 	}
